--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -711,7 +711,7 @@ border: 2px solid var(--IAMX-color);
 
 
 /*basic reset*/
-* {margin: 0; padding: 0;}
+//* {margin: 0; padding: 0;}
 
 /*form styles*/
 #msform {
@@ -720,24 +720,7 @@ border: 2px solid var(--IAMX-color);
 	text-align: center;
 	position: relative;
 }
-// #msform div {
-// 	background: white;
-// 	border: 0 none;
-// 	border-radius: 3px;
-// 	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-// 	padding: 20px 30px;
-// 	box-sizing: border-box;
-// 	width: 80%;
-// 	margin: 0 10%;
-	
-// 	/*stacking fieldsets above each other*/
-// 	position: relative;
-// }
-// /*Hide all except first fieldset*/
-// #msform fieldset:not(:first-of-type) {
-// 	display: none;
-// }
-/*inputs*/
+
 #msform input, #msform textarea {
 	padding: 15px;
 	border: 1px solid #ccc;
@@ -745,7 +728,7 @@ border: 2px solid var(--IAMX-color);
 	margin-bottom: 10px;
 	width: 100%;
 	box-sizing: border-box;
-	font-family: montserrat;
+	font-family: "Space Grotesk", sans-serif;
 	color: #2C3E50;
 	font-size: 13px;
 }
@@ -776,6 +759,9 @@ border: 2px solid var(--IAMX-color);
 
 .errorsClass{
   color: red;
+  display: block;
+  //flex-direction: column;
+
 }
 /*headings*/
 .fs-title {
@@ -790,53 +776,5 @@ border: 2px solid var(--IAMX-color);
 	color: #666;
 	margin-bottom: 20px;
 }
-// /*progressbar*/
-// #progressbar {
-// 	margin-bottom: 30px;
-// 	overflow: hidden;
-// 	/*CSS counters to number the steps*/
-// 	counter-reset: step;
-// }
-// #progressbar li {
-// 	list-style-type: none;
-// 	color: white;
-// 	text-transform: uppercase;
-// 	font-size: 9px;
-// 	width: 33.33%;
-// 	float: left;
-// 	position: relative;
-// }
-// #progressbar li:before {
-// 	content: counter(step);
-// 	counter-increment: step;
-// 	width: 20px;
-// 	line-height: 20px;
-// 	display: block;
-// 	font-size: 10px;
-// 	color: #333;
-// 	background: white;
-// 	border-radius: 3px;
-// 	margin: 0 auto 5px auto;
-// }
-// /*progressbar connectors*/
-// #progressbar li:after {
-// 	content: '';
-// 	width: 100%;
-// 	height: 2px;
-// 	background: white;
-// 	position: absolute;
-// 	left: -50%;
-// 	top: 9px;
-// 	z-index: -1; /*put it behind the numbers*/
-// }
-// #progressbar li:first-child:after {
-// 	/*connector not needed before the first step*/
-// 	content: none; 
-// }
-// /*marking active/completed steps green*/
-// /*The number of the step and the connector before it = green*/
-// #progressbar li.active:before,  #progressbar li.active:after{
-// 	background: #27AE60;
-// 	color: white;
-// }
+
 
